...
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="geR-eb-I5d"/>
                        <color key="backgroundColor" red="0.94893664119999999" green="0.94907325509999996" blue="0.96851223710000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <accessibility key="accessibilityConfiguration" identifier="MainView"/>
                        <constraints>
                            <constraint firstItem="gEV-iP-IC3" firstAttribute="top" secondItem="geR-eb-I5d" secondAttribute="top" constant="10" id="4KX-6f-QcR"/>
                            <constraint firstItem="gEV-iP-IC3" firstAttribute="leading" secondItem="geR-eb-I5d" secondAttribute="leading" id="JTz-qi-SwU"/>
                            <constraint firstItem="geR-eb-I5d" firstAttribute="bottom" secondItem="l9s-Cm-M5O" secondAttribute="bottom" constant="16" id="Swn-B0-LeU"/>
                            <constraint firstItem="geR-eb-I5d" firstAttribute="trailing" secondItem="gEV-iP-IC3" secondAttribute="trailing" id="ps5-8P-aCZ"/>
                            <constraint firstItem="geR-eb-I5d" firstAttribute="trailing" secondItem="l9s-Cm-M5O" secondAttribute="trailing" constant="16" id="qme-qf-B1e"/>
                            <constraint firstItem="geR-eb-I5d" firstAttribute="bottom" secondItem="gEV-iP-IC3" secondAttribute="bottom" id="vMK-M8-Fso"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="이슈" id="UKV-gM-DWb">
                        <barButtonItem key="leftBarButtonItem" style="plain" id="cp4-ND-Mtx">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="T6R-0R-meT">
                                <rect key="frame" x="20" y="11" width="64" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="8" maxY="0.0"/>
...
