...
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="5c7-K6-PoG"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="22"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
                                <state key="normal" title="Sign in with GitHub" image="github_icon">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
                                </attributedString>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                        <accessibility key="accessibilityConfiguration" identifier="LoginView"/>
                        <constraints>
                            <constraint firstItem="WVu-DP-Ohc" firstAttribute="trailing" secondItem="Xbm-5D-IMC" secondAttribute="trailing" id="887-3V-Qr2"/>
                            <constraint firstItem="pl0-rM-6N6" firstAttribute="top" secondItem="Xbm-5D-IMC" secondAttribute="bottom" constant="14" id="90r-sB-oUK"/>
                            <constraint firstItem="WVu-DP-Ohc" firstAttribute="leading" secondItem="Xbm-5D-IMC" secondAttribute="leading" id="I60-T1-Jaz"/>
                            <constraint firstItem="pl0-rM-6N6" firstAttribute="height" secondItem="Xbm-5D-IMC" secondAttribute="height" id="IXn-UT-wc9"/>
                            <constraint firstItem="Xbm-5D-IMC" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="M9U-1C-apv"/>
...
